# semistandard-tableaux

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  input11  input2  input21  knuth_relations_satisfying_homomorphism.hm  knuth_relations_satisfying_homomorphism.txt  knuth_relations_testing_main.cc  m1  main.c  main.cc  pool_identity_testing_main.cc  refactor.sh  sst_multiply_main.cc  tableaux-generation.py  tm_multiply_main.cc  todo
cpp/: CMakeLists.txt  main.cc  todo
cpp/include/: abstract_element.hpp  config.hpp  magma_element.hpp  magma_element_pool.hpp  ring_element.hpp  tropical_matrix.hpp  tuple.hpp  utils.hpp  version.hpp
cpp/include/free_monoid/: factor_monoid_element.hpp  factor_monoid_element_pool.hpp  free_monoid.hpp  free_monoid_element.hpp  free_monoid_entry.hpp  free_monoid_homomorphism.hpp  knuth_homomorphism.hpp
cpp/include/semistandard_tableaux/: ordered_array.hpp  semistandard_tableaux.hpp  tableaux_entry.hpp
cpp/include/tropical_elements/: tropical_matrix.hpp  tropical_number.hpp
cpp/src/: CMakeLists.txt  tuple.cc
cpp/src/free_monoid/: free_monoid_element.cc
cpp/src/logger/: Makefile  cmake_install.cmake
cpp/src/semistandard_tableaux/: CMakeLists.txt  ordered_array.cc  semistandard_tableaux.cc  tableaux_entry.cc
cpp/src/tropical_elements/: CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  tropical_matrix.cc  tropical_number.cc
cpp/tests/: CMakeLists.txt  free_monoid_element_tests.cc  free_monoid_entry_tests.cc  homomorphism_tests.cc  injectivity_test_tests.cc  knuth_homomorphism_tests.cc  magma_element_test_utils.cc  magma_element_test_utils.hpp  ordered_array_tests.cc  pool_tests.cc  semistandard_tableaux_tests.cc  tableaux_entry_tests.cc  tests.cc  tropical_matrix_tests.cc  tropical_number_tests.cc  tuple_tests.cc
include/: abstract_element.hpp  abstract_pool.h  arg_parsing.h  configuration.h  hashmap.h  homomorphism_testing.h  identity_testing.h  magma_element.hpp  magma_element_pool.hpp  ordered_array.h  placid.hpp  plactic_matroid.h  semistandard_tableaux.h  semistandard_tableaux_pool.h  semistandard_tableaux_word.h  tropical_matrices_pool.h  tropical_matrix.h  tropical_numbers.h  tuple.h  types.h  unit_tests.h  utils.h  utils.hpp  variable_assignment.h  version.hpp.in  yal_log.h
include/free_monoid/: factor_monoid_element.hpp  factor_monoid_element_pool.hpp  free_monoid_element.hpp  free_monoid_homomorphism.hpp  knuth_homomorphism.hpp
include/semistandard_tableaux/: ordered_array.hpp  semistandard_tableaux.hpp
include/tropical_elements/: tropical_matrix.hpp  tropical_number.hpp
inputs/: krsh.hm  m1.sst  m1.trmt  m2.sst  m2.trmt  m3.sstt  m3.trmt  m_res.sst  m_res.sstc  sst1.sst  tm1.tm  tm2.tm
inputs/random/: 2_size_6_58.sst  2_size_7_5.sst  2_size_8_26.sst  2_size_8_29.sst  2_size_8_41.sst  2_size_8_48.sst  2_size_8_80.sst  2_size_8_94.sst  2_size_9_0.sst  2_size_9_30.sst  2_size_9_45.sst  2_size_9_51.sst  2_size_9_52.sst  2_size_9_53.sst  2_size_9_68.sst  2_size_9_7.sst  2_size_9_88.sst  2_size_9_97.sst  3_size_6_0.sst  3_size_6_1.sst  3_size_6_2.sst  3_size_6_24.sst  3_size_6_32.sst  3_size_6_36.sst  3_size_6_37.sst  3_size_6_4.sst  3_size_6_48.sst  3_size_6_5.sst  3_size_6_51.sst  3_size_6_53.sst  3_size_6_59.sst  3_size_6_62.sst  3_size_6_63.sst  3_size_6_88.sst  3_size_6_96.sst  3_size_7_0.sst  3_size_7_1.sst  3_size_7_12.sst  3_size_7_19.sst  3_size_7_27.sst  (+1646 more)
inputs/random_tableaux_n/: 2_size_7_33.sst  2_size_8_13.sst  2_size_8_16.sst  2_size_8_44.sst  2_size_8_83.sst  2_size_8_92.sst  2_size_9_27.sst  2_size_9_54.sst  2_size_9_61.sst  2_size_9_78.sst  3_size_5_63.sst  3_size_5_82.sst  3_size_6_11.sst  3_size_6_18.sst  3_size_6_45.sst  3_size_6_65.sst  3_size_6_83.sst  3_size_6_9.sst  3_size_6_98.sst  3_size_7_11.sst  3_size_7_13.sst  3_size_7_15.sst  3_size_7_2.sst  3_size_7_21.sst  3_size_7_22.sst  3_size_7_23.sst  3_size_7_25.sst  3_size_7_30.sst  3_size_7_35.sst  3_size_7_36.sst  3_size_7_37.sst  3_size_7_45.sst  3_size_7_53.sst  3_size_7_60.sst  3_size_7_61.sst  3_size_7_64.sst  3_size_7_68.sst  3_size_7_77.sst  3_size_7_8.sst  3_size_7_9.sst  (+1371 more)
mains/: homomorphism_injectivity_testing_main.cc  knuth_relations_testing_main.cc  main.cc  pool_identity_testing_main.cc  sst_multiply_main.cc
src/: CMakeLists.txt  abstract_pool.c  arg_parsing.c  identity_testing.c  main.c  ordered_array.c  plactic_matroid.c  semistandard_tableaux.c  semistandard_tableaux_pool.c  semistandard_tableaux_word.c  tropical_matrices_pool.c  tropical_matrix.c  tropical_numbers.c  tuple.c  types.c  unit_tests.c  utils.c  utils.cc  variable_assignment.c  yal_log.c
src/free_monoid/: CMakeLists.txt  free_monoid_entry.cc
src/logger/: CMakeLists.txt
src/semistandard_tableaux/: ordered_array.cc  semistandard_tableaux.cc
src/tropical_elements/: tropical_number.cc
tests/: free_monoid_element_tests.cc  injectivity_test_tests.cc  knuth_homomorphism_tests.cc  magma_element_test_utils.hpp  ordered_array_tests.cc  pool_tests.cc  semistandard_tableaux_tests.cc  tableaux_entry_tests.cc  tropical_matrix_tests.cc  tropical_number_tests.cc  tuple_tests.cc
